--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 # Images
-[Aa]ssets/Images*
-[Aa]ssets/Resources*
+[Aa]ssets/Images/
+[Aa]ssets/Resources/
